# condax

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  LICENSE-MIT  MANIFEST.in  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  rever.xsh  setup.py  tox.ini
.github/workflows/: docs.yml  mkdocs.yml  pre-commit.yml  pythonpackage.yml  release.yml  requirements-docs.txt
changelog/: index.html
ci/: requirements.txt
cli/: index.html
condax/: __init__.py  activation.py  cli.py  conda.py  condarc.py  config.py  core.py  exceptions.py  metadata.py  migrate.py  paths.py  utils.py  wrapper.py
condax/cli/: __init__.py  __main__.py  ensure_path.py  export.py  inject.py  install.py  list.py  remove.py  repair.py  update.py
config/: index.html
contributing/: index.html
docs/: cli.md  commands.md  config.md  contributing.md  how-this-works.md  index.md  installation.md
how-this-works/: index.html
installation/: index.html
news/: TEMPLATE.md  deprecate-python-3.7.md  fix_remove_links.md  link-conflict.md  specific-version.md  upgrade-pydantic.md  xdg_config.md
search/: search_index.json
tests/: _test_env_vars.py  test_condax.py  test_condax_more.py  test_condax_repair.py  test_condax_update.py  test_config.py  test_doctor.py  test_metadata.py  test_utilis.py  test_wrapper.py
